--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,97 @@
-body{
-    background-color: olivedrab;
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* HEADER */
+header{
+    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow: 2px 2px;
+
+    margin: .5rem auto 0;
+    width: 99%;
+    min-height: 100px;
+
+    padding: 2rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header h2{
+    font-size: 3rem;
+    color: lightcoral;
+}
+
+/* MAIN */
+.container{
+    width: 80%;
+    margin: 2rem auto 0;
+    min-height: 300px;
+    padding: 1rem;
+    border: 4px dashed red;
+    /* display: flex;
+    justify-content: center; */
+    border-radius: 20px;
+}
+
+.hidden{
+    display: none;
+}
+
+.input-container{
+    margin-top: 1rem;
+    text-align: center;
+}
+
+input{
+    width: 250px;
+    height: 30px;
+
+    border-radius: 8px;
+    border-color: rgba(128, 128, 128, 0.336);
+}
+
+button{
+    margin-left: 2rem;
+    height: 30px;
+    width: 100px;
+}
+
+ul{
+    list-style: none;
+    
+}
+
+ul li{
+    font-size: 1.5rem;
+    border-bottom: 1px solid black;
+    padding: .4rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.list-container{
+    width: 80%;
+    min-height: 200px;
+
+    margin: 1rem auto 0;
+    background-color: lightcyan;
+    padding: 1rem;
+}
+
+.check{
+    margin-right: 1rem;
+    color: green;
+}
+
+.cancel{
+    color: red;
+}
+
+.done{
+    text-decoration: line-through;
 }
